--- a/style.css
+++ b/style.css
@@ -75,3 +75,30 @@ footer {
     cursor: pointer;
     background-color: #27ae60;
 }
+
+.chords-wrapper {
+    display: flex;
+    flex-direction: row;
+    margin: 20px 0;
+}
+
+.chord {
+    border-radius: 5px;
+    background-color: #3498db;
+    color: white;
+    font-weight: 600;
+    text-align: center;
+    padding: 0 30px;
+    margin: 0 15px;
+
+    transition: 0.2s ease-out;
+}
+
+.chord .key {
+    font-size: 20px;
+}
+
+.chord:hover {
+    background-color: #2980b9;
+    cursor: pointer;
+}
